@@ -1,3 +1,7 @@
+------------------------  RELEASE 1.10.1  -----------------------
+
+* Audio3DManager accepts tuple in setSoundVelocity/setListenerVelocity
+
 ------------------------  RELEASE 1.10.0  -----------------------
 
 This is a major release with significant changes.  Please review the
